<resources>
    <string name="app_name">Calculator</string>
    <string name="clear1char">←</string>
    <string name="title">Calculator</string>
    <string name="sqrt">√</string>
    <string name="clear">C</string>
    <string name="clearall">CE</string>
    <string name="div">÷</string>
    <string name="mul">X</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="per">%</string>
    <string name="equal">=</string>

</resources>
